Fixed top stories overlapped by sticky header

--- a/packages/global/scss/components/blocks/_top-stories.scss
+++ b/packages/global/scss/components/blocks/_top-stories.scss
@@ -1,4 +1,5 @@
 .top-stories {
+  margin-top: 100px;
   &__header {
     margin-bottom: 24px;
     @include media-breakpoint-up(md) {
